--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-#  - python -c "import tcrdist as td; td.setup_blast.install_blast_to_externals(download_from = 'ncbi_linux');"
+  - python -c "import tcrdist as td; td.setup_blast.install_blast_to_externals(download_from = 'dropbox_linux');"
   - pytest
