--- a/requirements36.txt
+++ b/requirements36.txt
@@ -2,6 +2,6 @@ future==0.17.1
 matplotlib==3.0.3
 numpy==1.16.2
 pandas==0.24.2
-parasail-python==1.1.17 
+parasail
 scikit-learn==0.20.3
 scipy==1.2.1
