--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -73,3 +73,5 @@ wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
 zipp==0.5.1
+statsmodels==0.10.1
+git+https://github.com/agartland/fishersapi.git#egg=fishersapi
