--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ parasail==1.1.16
 scikit-learn==0.17.1
 scipy==0.16.0
 seaborn==0.9.0
+statsmodels==0.10.1
+git+https://github.com/agartland/fishersapi.git#egg=fishersapi
