--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,3 +5,5 @@ parasail
 scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
+statsmodels==0.10.1
+git+https://github.com/agartland/fishersapi.git#eg
