--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 future==0.17.1
+matplotlib==3.0.3
 numpy==1.16.2
 pandas==0.24.2
 parasail
@@ -6,4 +7,4 @@ scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
 statsmodels==0.10.1
-git+https://github.com/agartland/fishersapi.git#eg
+git+https://github.com/agartland/fishersapi.git#egg=fishersapi
