--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
 # command to run tests
 script:
   - python -c "import tcrdist as td; td.setup_blast.install_blast_to_externals(download_from = 'ncbi_linux');"
+  - python -c "import tcrdist as td; td.setup_db.install.install_all_next_gen(); td.install_test_files.install_test_files()"
   - pytest
