--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,4 +7,5 @@ scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
 statsmodels==0.10.1
+sphinx_rtd_theme
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
