--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,4 +8,5 @@ scipy==1.2.1
 seaborn==0.9.0
 statsmodels==0.10.1
 sphinx_rtd_theme
+tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
