--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ scikit-learn==0.17.1
 scipy==0.18
 seaborn==0.9.0
 statsmodels==0.10.1
-pytables
+tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
