--- a/requirements36.txt
+++ b/requirements36.txt
@@ -7,5 +7,5 @@ scikit-learn==0.20.3
 scipy==1.2.1
 seaborn==0.9.0
 statsmodels==0.10.1
-pytables
+tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
