--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-futures==3.2.0
-matplotlib==1.4.3
+futures
+matplotlib
 numpy
-pandas==0.20.3
+pandas
 parasail==1.1.16
 scikit-learn==0.17.1
-scipy==0.18
-seaborn==0.9.0
-statsmodels==0.10.1
+scipy
+seaborn
+statsmodels
 tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
