Modified function for pw distances so that multiprocessing works on windows. changed input to metric so that its a string name of parasail matrix

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ seaborn
 statsmodels
 tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
+git+https://github.com/agartland/pwseqdist.git#egg=pwseqdist
