--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -75,3 +75,4 @@ widgetsnbextension==3.4.2
 zipp==0.5.1
 statsmodels==0.10.1
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
+git+https://github.com/agartland/pwseqdist.git#egg=pwseqdist
