--- a/requirements36.txt
+++ b/requirements36.txt
@@ -9,3 +9,4 @@ seaborn==0.9.0
 statsmodels==0.10.1
 tables
 git+https://github.com/agartland/fishersapi.git#egg=fishersapi
+git+https://github.com/agartland/pwseqdist.git#egg=pwseqdist
