--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ python:
 install:
   #- if [[ $TRAVIS_PYTHON_VERSION == '2.7.14' ]]; then travis_retry pip install -r requirements.txt; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '3.6' ]]; then travis_retry pip install -r requirements36.txt; fi
+  - pip install pytest-cov
+  - pip install coveralls
 # command to run tests
 script:
   - python -c "import tcrdist as td; td.setup_blast.install_blast_to_externals(download_from = 'ncbi_linux');"
   - python -c "import tcrdist as td; td.setup_db.install_all_next_gen()"
   - python -c "import tcrdist as td; td.install_test_files.install_test_files()"
-  - pytest
+  - pytest --cov=pwseqdist/
+after_success:
+  - coveralls
