Added to gitignore and moving to test with test_file

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 *~
 .cache/
 testing_ref/
+tcrdist/external/*
+tcrdist.log
+tcrdist/test_files/*
+tmp/*
 
 
 # Byte-compiled / optimized / DLL files
