--- a/requirements37.txt
+++ b/requirements37.txt
@@ -1,7 +1,7 @@
 pytest==5.4.1
 pandas==1.0.0
 future>=0.17.1
-matplotlib=3.0.3
+matplotlib==3.0.3
 numpy==1.18.1
 parasail==1.2
 scikit-learn>=0.20.3
