--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -58,7 +58,7 @@ pytz==2019.1
 pyzmq==18.0.0
 qtconsole==4.5.1
 scandir==1.10.0
-scikit-learn==0.17.1
+scikit-learn>=0.23
 scipy==0.16.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
