--- a/requirements36.txt
+++ b/requirements36.txt
@@ -4,7 +4,7 @@ matplotlib==3.0.3
 numpy==1.16.2
 pandas==0.24.2
 parasail
-scikit-learn==0.20.3
+scikit-learn>=0.23
 scipy==1.2.1
 seaborn==0.9.0
 statsmodels==0.10.1
