--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
 
 # command to run tests
 script:
+  - cp tcrdist/datasets/dash.csv dash.csv
+  - python -c "from tcrsampler.setup_db import install_all_next_gen; install_all_next_gen(dry_run = False)"
   - python -c "import tcrdist as td; td.setup_blast.install_blast_to_externals(download_from = 'ncbi_linux');"
   - python -c "import tcrdist as td; td.setup_db.install_all_next_gen()"
   - python -c "import tcrdist as td; td.install_test_files.install_test_files()"
