change to pip version of pwseqdist-0.1.3

--- a/requirements36.txt
+++ b/requirements36.txt
@@ -11,7 +11,7 @@ statsmodels==0.10.1
 tables
 parmap
 fishersapi
-pwseqdist
+git+https://github.com/agartland/pwseqdist.git
 hierdiff
 numba
 tcrsampler
