--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-zipdist==0.1.3
-futures
-matplotlib
-numpy
-pandas
-parasail==1.1.16
+pytest==5.4.1
+pandas==1.0.3
+future>=0.17.1
+matplotlib==3.0.3
+numpy==1.18.1
+parasail==1.2
 scikit-learn>=0.23
-scipy
-seaborn
-statsmodels
+scipy==1.4.1
+seaborn>=0.9.0
+statsmodels>=0.10.1
 tables
 parmap
-fishersapi
-pwseqdist
-hierdiff
 numba
-tcrsampler
+escapejson
+fishersapi==0.2
+pwseqdist==0.2
+hierdiff==0.2
+tcrsampler==0.1.7
+zipdist==0.1.5
