--- a/requirements36.txt
+++ b/requirements36.txt
@@ -1,4 +1,3 @@
-zipdist==0.1.3
 future==0.17.1
 matplotlib==3.0.3
 numpy==1.16.2
@@ -10,8 +9,10 @@ seaborn==0.9.0
 statsmodels==0.10.1
 tables
 parmap
-fishersapi
-pwseqdist
-hierdiff
 numba
-tcrsampler
+escapejson
+fishersapi==0.2
+pwseqdist==0.2
+hierdiff==0.2
+tcrsampler==0.1.7
+zipdist==0.1.5
