--- a/requirements37.txt
+++ b/requirements37.txt
@@ -1,4 +1,3 @@
-zipdist==0.1.3
 pytest==5.4.1
 pandas==1.0.3
 future>=0.17.1
@@ -12,7 +11,10 @@ statsmodels>=0.10.1
 tables
 parmap
 numba
-fishersapi
-pwseqdist
-hierdiff
-tcrsampler
+escapejson
+fishersapi==0.2
+pwseqdist==0.2
+hierdiff==0.2
+tcrsampler==0.1.7
+zipdist==0.1.5
+
